# celo-bls-snark-rs

./: Cargo.toml
crates/bls-crypto/: Cargo.toml
crates/bls-crypto/examples/: pop_csv.rs  simple_signature.rs
crates/bls-crypto/src/: lib.rs  test_helpers.rs
crates/bls-crypto/src/bls/: batch.rs  mod.rs  public.rs  secret.rs  signature.rs
crates/bls-crypto/src/hash_to_curve/: mod.rs  try_and_increment.rs  try_and_increment_cip22.rs
crates/bls-crypto/src/hashers/: composite.rs  direct.rs
